--- a/tugas6_rwd_RachmadAzizFazarikha_UniversitasTrunojoyoMadura/css/style.css
+++ b/tugas6_rwd_RachmadAzizFazarikha_UniversitasTrunojoyoMadura/css/style.css
@@ -19,9 +19,10 @@ body{
     object-fit: cover;
 }
 
-.navBar{
+.navbar{
     background-color: var(--secondary);
     color: var(--primary);
+    padding: 0;
 }
 
 .card{
@@ -46,4 +47,34 @@ ul{
 
 footer a{
     color: var(--primary);
+}
+
+.table{
+    background-color: var(--primary);
+    color: var(--secondary);
+}
+
+.table th, .table td{
+    background-color: var(--secondary);
+    color: var(--primary);
+}
+
+marquee {
+    width: 100%;
+    height: 320px;
+    display: flex;
+    gap: 15px;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.bnt-primary{
+    background-color: var(--primary);
+    color: var(--secondary);
+}
+
+.btn{
+    background-color: var(--primary);
+    color: var(--secondary);
 }
